k8s/dbs.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
        - name: auth-db
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: auth-pg-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: auth-pg-storage
          persistentVolumeClaim:
            claimName: auth-pg-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: auth-db
spec:
  selector:
    app: auth-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-db
  template:
    metadata:
      labels:
        app: user-db
    spec:
      containers:
        - name: user-db
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: user-pg-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: user-pg-storage
          persistentVolumeClaim:
            claimName: user-pg-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: user-db
spec:
  selector:
    app: user-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-db
  template:
    metadata:
      labels:
        app: order-db
    spec:
      containers:
        - name: order-db
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: order-pg-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: order-pg-storage
          persistentVolumeClaim:
            claimName: order-pg-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: order-db
spec:
  selector:
    app: order-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-db
  template:
    metadata:
      labels:
        app: payment-db
    spec:
      containers:
        - name: payment-db
          image: postgres:16
          ports:
            - containerPort: 5432
